--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,13 @@
 <hr />
 <footer class="container-fluid text-center">
-  <p>&copy; {{currentYear}} text-compare.tools, All rights reserved.</p>
+  <p>&copy; {{currentYear}} <a href="https://www.text-compare.tools">text-compare.tools</a>, All rights reserved.</p>
 </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2DMJ6GVH9Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2DMJ6GVH9Y');
+</script>
